<resources>
    <string name="app_name">QuizWithFisherYates</string>
    <string name="title">ALOPE Quiz</string>

    <!--  Form Hint  -->
    <string name="hintName">Name</string>
    <string name="hintUsername">Username</string>
    <string name="hintPassword">Password</string>

    <!--  Login  -->
    <string name="buttonLogin">Login</string>
    <string name="buttonRegistrasi">Registrasi</string>
    <string name="accountRegistration">Registrasi Akun</string>
    <string name="accountLogin">Login Akun</string>

    <!--    -->
    <string name="buttonStart">Start</string>
    <string name="buttonLeaderboard">Leaderboard</string>
    <string name="copyright_by_alope">Copyright by ALOPE</string>
    <string name="buttonBack">Kembali</string>
</resources>