<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/admin_update_user"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".adminActivities.UpdateUserActivity"
    android:fillViewport="true"
    android:background="@drawable/gradient_background">

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:padding="24dp">

            <!-- Tombol Kembali -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:gravity="start|center_vertical"
                android:paddingBottom="8dp"
                android:id="@+id/backButton">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/ic_back"
                    android:contentDescription="Kembali"
                    android:clickable="true"
                    android:focusable="true"
                    android:padding="4dp"
                    app:tint="@color/black" />

                <TextView
                    android:text="Kembali"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:textColor="#000000"/>
            </LinearLayout>

            <!-- Tombol Home -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:gravity="end|center_vertical"
                android:paddingBottom="8dp"
                android:onClick="goToAdminMain">

                <ImageView
                    android:id="@+id/homeButton"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/ic_home"
                    android:contentDescription="Home"
                    android:clickable="true"
                    android:focusable="true"
                    android:padding="4dp"
                    app:tint="@color/black" />

                <TextView
                    android:text="Home"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:textColor="#000000"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:src="@drawable/register"
                android:layout_gravity="center"
                android:contentDescription="@string/app_name"
                android:layout_marginTop="100dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="UPDATE USER"
                android:textSize="30sp"
                android:textStyle="bold"
                android:textColor="#000"
                android:layout_gravity="center" />

            <!--     Form Section       -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/rounded_auth_card"
                android:layout_margin="20dp"
                android:layout_marginTop="40dp"
                android:padding="20dp">
                <EditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="48dp"
                    android:padding="12dp"
                    android:hint="@string/hintName"
                    android:inputType="text"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="10dp"
                    android:autofillHints="username"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray"/>

                <EditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="48dp"
                    android:padding="12dp"
                    android:hint="@string/hintUsername"
                    android:inputType="text"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="10dp"
                    android:autofillHints="username"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray"/>


                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="48dp"
                    android:padding="12dp"
                    android:hint="@string/hintPassword"
                    android:inputType="textPassword"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="10dp"
                    android:autofillHints="password"
                    android:textColor="@color/black"
                    android:textColorHint="@color/gray"/>


                <androidx.appcompat.widget.AppCompatButton
                    style="@style/Widget.AppCompat.Button"
                    android:onClick="onUpdate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/rounded_button"
                    android:text="Update"
                    android:textColor="#000"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>
</ScrollView>